# energy_thurgau

./: notebook.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
data/thurgau/: div-energie-3.parquet  metadata.json
src/energy_thurgau/: __init__.py
